<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/llItemDetail">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <Button
            android:id="@+id/btnSaveItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btnSaveItem" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textStyle="bold"
                android:textSize="10pt"
                android:text="@string/tvContent"
                android:id="@+id/textView2" />

            <EditText
                android:id="@+id/edtTenCongViec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="10pt"
                android:maxLines="3"
                android:layout_span="2"
                android:textStyle="bold"
                android:hint="@string/hintContent">
                <requestFocus />
            </EditText>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="10pt"
                android:textStyle="bold"
                android:text="@string/tvThoiGian"
                android:id="@+id/textView" />
            <Button
                android:id="@+id/btnNgay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="10pt">
            </Button>
            <Button
                android:id="@+id/btnGio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="10pt">
            </Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textSize="10pt"
                android:textStyle="bold"
                android:text="@string/tvDiaDiem"
                android:id="@+id/textView1" />
            <EditText
                android:id="@+id/edtDiaDiem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_span="2"
                android:textSize="10pt"
                android:maxLines="3"
                android:hint="@string/hintDiaDiem">
            </EditText>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_column="0"
                android:text="Chọn màu :"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="2"
                android:id="@+id/spColorChooser">
            </Spinner>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <CheckBox
                android:id="@+id/ckNhacNho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:textStyle="bold"
                android:hint="@string/ckNhacNho"
                android:layout_column="0" />
            <CheckBox
                android:id="@+id/ckHoanTat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_column="1"
                android:hint="@string/ckHoanTat"
                android:layout_gravity="right"/>
        </TableRow>
    </TableLayout>
</LinearLayout>